tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__4kItemStorageCel-AAAAAAAAAAAAAAAAAAAFJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1316,
  "prerequisites": [
    1317,
    1310
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Second tier storage cell, which can contain 4,096 bytes of storage. 4,096 bytes of storage can hold 508 stacks of a single item, or 260 stacks, while holding 63 different items. The 4k storage cell uses 32 bytes of data to store a single type.\n\nWhen placed inside a drive or chest will consume 1.0 ae/t.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "4k Item Storage Cell",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1317,
    1310
  ],
  "rewards": [],
  "tasks": []
}
