tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__64kItemStorageCe-AAAAAAAAAAAAAAAAAAAE5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1255,
  "prerequisites": [
    1256
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Highest tier storage cell, which can contain 65,536 bytes of storage. 65,536 bytes of storage can hold 8,128 stacks of a single item, or 4,160 stacks, while holding 63 different items. The 64k storage cell uses 512 bytes of data to store a single type.\n\nWhen placed inside a drive or chest will consume 2.0 ae/t.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "64k Item Storage Cell",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1256
  ],
  "rewards": [],
  "tasks": []
}
