tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AE2FluidCrafting-AAAAAAAAAAAAAAAAAAAMsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3250,
  "prerequisites": [
    2477
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Fluid crafting directly integrated in your ME system. NO WAY!\n\nAE2FC is a powerful add-on that was backported for GTNH.\n\nNow, what do you need to get that juicy stuff working?\nEvery ME System needs a Fluid Discretizer. It allows for on demand crafting. While you can use AE2FC without Fluid Discretizer for moving fluids, you need a Discretizer for autocrafting.\n\nThen you also need a Fluid Terminal or a Fluid Processing Terminal for the Assembly Line.\n\nWhen creating patterns you will notice your fluids being placed as if they were items.\nYour finished patterns will look blue-ish. Placing those in a Dual Interface will allow AE2 to push the fluids and items both. Note. Fluids are being sent first, then items.\nYou can switch the dual interface on the top right if you want it to keep fluids in stock.\n\nIf you use a blue pattern (fluid pattern) in a normal interface, AE2 will send the fluid as a fluid packet. This is just a representation of the fluid as an item. A fluid decoder can turn it back into a fluid and saves it in the fluid grid.\n\nYou can use an ingredient buffer (large or normal) so your items and fluids sent by a pattern can get stored internally in one block. The normal buffer can hold 9 items and 4 fluids whereas the large one can hold 27 items and 7 fluids. It is not needed, but you can use it to automate things with item and fluid conduits.\n\nIf you want to automate single blocks it's as easy as eating chocolate cake while on a diet:\nMake the pattern, make an interface, boom- done! It will automatically insert the fluid in the fluid inventory of a single block machine.\n\nEven automating more difficult things like the Assembly Line becomes much easier with these tools.\n\nIf you need more detailed information, visit the wiki:\n\n[url]https://wiki.gtnewhorizons.com/wiki/Applied_Energistics_2#Autocrafting_in_AE2[/url]\n\n[note]The Extra Cells mod has been removed. Any old components and cells were converted to AE2 and AE2FC parts where possible.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "AE2 Fluid Crafting",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2477
  ],
  "rewards": [],
  "tasks": []
}
